--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="header">
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Ира Першина</h1>
+      <h2 class="header__subtitle">QA</h2>
       <h3 class="header__subtitle">стрелец</h3>
     </header>
     <main>
